Added Echo Command Handling